Git Tests/force-app/main/default/default/objects/SaldoFinanceiroReserva__c/SaldoFinanceiroReserva__c.object-meta.xml
<CustomObject>
    <label>Saldo financeiro da reserva</label>
    <nameField>
        <displayFormat>SF-{00000000}</displayFormat>
        <label>Nome de saldo financeiro da reserva</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saldo financeiro das reservas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>