Git Tests/force-app/main/default/default/objects/SaldoFinanceiroReserva__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Saldo financeiro das reservas</relationshipLabel>
    <relationshipName>SaldoFinanceiroReservas</relationshipName>
    <type>Lookup</type>
</CustomField>