Git Tests/force-app/main/default/default/objects/SaldoFinanceiroReserva__c/fields/CodigoGrupoCLiente__c.field-meta.xml
<CustomField>
    <fullName>CodigoGrupoCLiente__c</fullName>
    <externalId>true</externalId>
    <label>Código do grupo de cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>