Git Tests/force-app/main/default/default/objects/SaldoFinanceiroReserva__c/fields/CodigoRegiao__c.field-meta.xml
<CustomField>
    <fullName>CodigoRegiao__c</fullName>
    <externalId>true</externalId>
    <label>Código da região</label>
    <length>255</length>
    <type>Text</type>
</CustomField>