Git Tests/force-app/main/default/default/objects/SaldoFinanceiroReserva__c/fields/SaldoDisponivel__c.field-meta.xml
<CustomField>
    <fullName>SaldoDisponivel__c</fullName>
    <label>Saldo disponível</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>