Git Tests/force-app/main/default/default/objects/SaldoFinanceiroReserva__c/fields/SaldoLiberado__c.field-meta.xml
<CustomField>
    <fullName>SaldoLiberado__c</fullName>
    <label>Saldo liberado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>