Git Tests/force-app/main/default/default/objects/SaldoFinanceiroReserva__c/recordTypes/SaldoKeyAccount.recordType-meta.xml
<RecordType>
    <fullName>SaldoKeyAccount</fullName>
    <active>true</active>
    <label>Saldo key account</label>
</RecordType>