Git Tests/force-app/main/default/default/objects/SaldoFinanceiroReserva__c/recordTypes/SaldoRegional.recordType-meta.xml
<RecordType>
    <fullName>SaldoRegional</fullName>
    <active>true</active>
    <label>Saldo regional</label>
</RecordType>